--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,7 @@
 
 html {
     height: 100vh;
-    /* Fallback for browsers that do not support Custom Properties */
     height: calc(var(--vh, 1vh) * 100);
+    scroll-behavior: smooth;
 
 }
