--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,5 @@
 }
 
 html {
-    height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
-    scroll-behavior: smooth;
-
+    overflow-x: hidden;
 }
