--- a/src/index.css
+++ b/src/index.css
@@ -40,3 +40,24 @@
 html {
     overflow-x: hidden;
 }
+
+.topTrack-label {
+    overflow: visible;
+}
+
+.topTrack-label span {
+    display: none;
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding: 4px;
+    border-radius: 4px;
+    background: #fff;
+    color: black;
+    width: max-content;
+}
+
+.topTrack-label:hover span {
+    display: block;
+}
